chore(c4_w3_assignment): complete assignment

--- a/C4-Natural_Language_Processing_with_Attention_Models/W3/Assignment/C4W3_Assignment.ipynb
+++ b/C4-Natural_Language_Processing_with_Attention_Models/W3/Assignment/C4W3_Assignment.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3a532381",
    "metadata": {
     "colab": {
@@ -105,7 +105,19 @@
      "graded"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow_text'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mitertools\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow_text\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf_text\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtransformer_utils\u001b[39;00m \n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow_text'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
@@ -656,7 +668,7 @@
     "    \n",
     "    # prev_no_mask is True if the previous token was NOT masked, False otherwise\n",
     "    # set prev_no_mask to True\n",
-    "    prev_no_mask = None\n",
+    "    prev_no_mask = True\n",
     "    \n",
     "    # Loop over the tokenized text\n",
     "    for token in tokenizer.tokenize(text).numpy():\n",
@@ -665,40 +677,40 @@
     "        rnd_val = randomizer() \n",
     "        \n",
     "        # Check if the noise is greater than a random value (weighted coin flip)\n",
-    "        if None > None:\n",
+    "        if noise > rnd_val:\n",
     "            \n",
     "            # Check if previous token was NOT masked\n",
     "            if prev_no_mask:\n",
     "                \n",
     "                # Current sentinel increases by 1\n",
-    "                cur_sentinel_num += None\n",
+    "                cur_sentinel_num += 1\n",
     "                \n",
     "                # Compute end_id by subtracting current sentinel value out of the total vocabulary size\n",
-    "                end_id = None - None\n",
+    "                end_id = vocab_size - cur_sentinel_num\n",
     "                \n",
     "                # Append end_id at the end of the targets\n",
-    "                targs.append(None)\n",
+    "                targs.append(end_id)\n",
     "                \n",
     "                # Append end_id at the end of the inputs\n",
-    "                inps.append(None)\n",
+    "                inps.append(end_id)\n",
     "                \n",
     "            # Append token at the end of the targets\n",
-    "            targs.append(None)\n",
+    "            targs.append(token)\n",
     "            \n",
     "            # set prev_no_mask accordingly\n",
-    "            prev_no_mask = None\n",
+    "            prev_no_mask = False\n",
     "\n",
     "        else:\n",
     "            \n",
     "            # Append token at the end of the inputs\n",
-    "            inps.append(None)\n",
+    "            inps.append(token)\n",
     "            \n",
     "            # Set prev_no_mask accordingly\n",
-    "            prev_no_mask = None\n",
+    "            prev_no_mask = True\n",
     "    \n",
     "    \n",
     "    # Add EOS token to the end of the targets\n",
-    "    targs.append(None)\n",
+    "    targs.append(eos)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -1282,31 +1294,31 @@
     "    ### START CODE HERE ###\n",
     "    \n",
     "    # Loop over all the articles\n",
-    "    for article in None:\n",
+    "    for article in dataset:\n",
     "        \n",
     "        # Loop over each paragraph of each article\n",
-    "        for paragraph in None:\n",
+    "        for paragraph in article['paragraphs']:\n",
     "            \n",
     "            # Extract context from the paragraph\n",
-    "            context = None\n",
+    "            context = paragraph['context']\n",
     "            \n",
     "            #Loop over each question of the given paragraph\n",
-    "            for qa in None:\n",
+    "            for qa in paragraph['qas']:\n",
     "                \n",
     "                # If this question is not impossible and there is at least one answer\n",
     "                if len(qa['answers']) > 0 and not(qa['is_impossible']):\n",
     "                    \n",
     "                    # Create the question/context sequence\n",
-    "                    question_context = 'question: ' + None + ' context: ' + None\n",
+    "                    question_context = 'question: ' + qa['question']+ ' context: ' + context\n",
     "                    \n",
     "                    # Create the answer sequence. Use the text field of the first answer\n",
-    "                    answer = 'answer: ' + None\n",
+    "                    answer = 'answer: ' + qa['answers'][0]['text']\n",
     "                    \n",
     "                    # Add the question_context to the inputs list\n",
-    "                    inputs.append(None)\n",
+    "                    inputs.append(question_context)\n",
     "                    \n",
     "                    # Add the answer to the targets list\n",
-    "                    targets.append(None)\n",
+    "                    targets.append(answer)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -1624,39 +1636,39 @@
     "    # QUESTION SETUP\n",
     "    \n",
     "    # Tokenize the question\n",
-    "    tokenized_question = tokenizer.tokenize(None)\n",
+    "    tokenized_question = tokenizer.tokenize(question)\n",
     "    \n",
     "    # Add an extra dimension to the tensor\n",
     "    tokenized_question = tf.expand_dims(tokenized_question, 0) \n",
     "    \n",
     "    # Pad the question tensor\n",
-    "    padded_question = tf.keras.preprocessing.sequence.pad_sequences(None,\n",
-    "                                                                    maxlen=None,\n",
+    "    padded_question = tf.keras.preprocessing.sequence.pad_sequences(tokenized_question,\n",
+    "                                                                    maxlen=encoder_maxlen,\n",
     "                                                                    padding='post', \n",
     "                                                                    truncating='post') \n",
     "    # ANSWER SETUP\n",
     "    \n",
     "    # Tokenize the answer\n",
     "    # Hint: All answers begin with the string \"answer: \"\n",
-    "    tokenized_answer = tokenizer.tokenize(None)\n",
+    "    tokenized_answer = tokenizer.tokenize(\"answer: \")\n",
     "    \n",
     "    # Add an extra dimension to the tensor\n",
-    "    tokenized_answer = tf.expand_dims(None, None)\n",
+    "    tokenized_answer = tf.expand_dims(tokenized_answer, 0)\n",
     "    \n",
     "    # Get the id of the EOS token\n",
     "    eos = tokenizer.string_to_id(\"</s>\") \n",
     "    \n",
     "    # Loop for decoder_maxlen iterations\n",
-    "    for i in range(None):\n",
+    "    for i in range(decoder_maxlen):\n",
     "        \n",
     "        # Predict the next word using the model, the input document and the current state of output\n",
-    "        next_word = transformer_utils.next_word(None, None, None)\n",
+    "        next_word = transformer_utils.next_word(padded_question, tokenized_answer, model)\n",
     "        \n",
     "        # Concat the predicted next word to the output \n",
-    "        tokenized_answer = tf.concat([None, None], axis=1)\n",
+    "        tokenized_answer = tf.concat([tokenized_answer, next_word], axis=1)\n",
     "        \n",
     "        # The text generation stops if the model predicts the EOS token\n",
-    "        if None == None:\n",
+    "        if next_word == eos:\n",
     "            break \n",
     "    \n",
     "    ### END CODE HERE ###\n",
@@ -1804,7 +1816,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
